Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17781

Server crashes in next_linear_tab

    XMLWordPrintable

Details

    Description

      CREATE TABLE t1 (i1 int);
       
      (SELECT AVG(0) OVER (), MAX('o') FROM t1)
      UNION ALL
      (SELECT AVG(0) OVER (), MAX('o') FROM t1);
      

      10.2 ae96b47f9ed184cdfe6622f5

       
      #4  0x000055646a3be9dc in next_linear_tab (join=0x7f58a4015400, tab=0x7f58a40170e8, include_bush_roots=WITHOUT_BUSH_ROOTS) at /git/10.2/sql/sql_select.cc:8873
      #5  0x000055646a3587ce in st_select_lex::set_explain_type (this=0x7f58a4013218, on_the_fly=true) at /git/10.2/sql/sql_lex.cc:4437
      #6  0x000055646a3e6bcb in JOIN::save_explain_data_intern (this=0x7f58a4015400, output=0x7f58a4016120, need_tmp_table_arg=true, need_order_arg=false, distinct_arg=false, message=0x55646ae2135f "No tables used") at /git/10.2/sql/sql_select.cc:24921
      #7  0x000055646a3b00a8 in JOIN::save_explain_data (this=0x7f58a4015400, output=0x7f58a4016120, can_overwrite=false, need_tmp_table=true, need_order=false, distinct=false) at /git/10.2/sql/sql_select.cc:3378
      #8  0x000055646a3a80e6 in JOIN::optimize (this=0x7f58a4015400) at /git/10.2/sql/sql_select.cc:1131
      #9  0x000055646a44ff58 in st_select_lex_unit::optimize (this=0x7f58a40046e0) at /git/10.2/sql/sql_union.cc:944
      #10 0x000055646a450189 in st_select_lex_unit::exec (this=0x7f58a40046e0) at /git/10.2/sql/sql_union.cc:978
      #11 0x000055646a44cf16 in mysql_union (thd=0x7f58a4000b00, lex=0x7f58a4004618, result=0x7f58a4014780, unit=0x7f58a40046e0, setup_tables_done_option=0) at /git/10.2/sql/sql_union.cc:41
      #12 0x000055646a3a567e in handle_select (thd=0x7f58a4000b00, lex=0x7f58a4004618, result=0x7f58a4014780, setup_tables_done_option=0) at /git/10.2/sql/sql_select.cc:354
      #13 0x000055646a370bed in execute_sqlcom_select (thd=0x7f58a4000b00, all_tables=0x7f58a4012bf0) at /git/10.2/sql/sql_parse.cc:6478
      #14 0x000055646a366869 in mysql_execute_command (thd=0x7f58a4000b00) at /git/10.2/sql/sql_parse.cc:3484
      #15 0x000055646a374a79 in mysql_parse (thd=0x7f58a4000b00, rawbuf=0x7f58a4012448 "(SELECT AVG(0) OVER (), MAX('o') FROM t1)\nUNION ALL\n(SELECT AVG(0) OVER (), MAX('o') FROM t1)", length=93, parser_state=0x7f58e8790080, is_com_multi=false, is_next_command=false) at /git/10.2/sql/sql_parse.cc:8012
      #16 0x000055646a3620da in dispatch_command (command=COM_QUERY, thd=0x7f58a4000b00, packet=0x7f58a4095d61 "(SELECT AVG(0) OVER (), MAX('o') FROM t1)\nUNION ALL\n(SELECT AVG(0) OVER (), MAX('o') FROM t1)", packet_length=93, is_com_multi=false, is_next_command=false) at /git/10.2/sql/sql_parse.cc:1824
      #17 0x000055646a360a36 in do_command (thd=0x7f58a4000b00) at /git/10.2/sql/sql_parse.cc:1378
      #18 0x000055646a4b2cb2 in do_handle_one_connection (connect=0x55646d2b1cc0) at /git/10.2/sql/sql_connect.cc:1335
      #19 0x000055646a4b2a32 in handle_one_connection (arg=0x55646d2b1cc0) at /git/10.2/sql/sql_connect.cc:1241
      #20 0x000055646ace3f74 in pfs_spawn_thread (arg=0x55646d1fd360) at /git/10.2/storage/perfschema/pfs.cc:1862
      #21 0x00007f58f7e056ba in start_thread (arg=0x7f58e8791700) at pthread_create.c:333
      #22 0x00007f58f729a41d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109
      
      

      Attachments

        Issue Links

          Activity

            People

              varun Varun Gupta (Inactive)
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.25d
                  1.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.